--- a/Money_book/MainWindow.xaml
+++ b/Money_book/MainWindow.xaml
@@ -5,8 +5,68 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Money_book"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="Money_book" Height="450" Width="820" ResizeMode="NoResize" Loaded="Window_Loaded" >
+    <Window.Resources>
+        <Style x:Key="Button" TargetType="Button">
+            <Setter Property="OverridesDefaultStyle" Value="True"/>
+            <Setter Property="Cursor" Value="Hand"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Background" Value="#00C9FF"/>
+            <Setter Property="Opacity" Value="0.4"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Grid SnapsToDevicePixels="True">
+                            <Border Background="{TemplateBinding Background}" BorderThickness="0" CornerRadius="10" BorderBrush="{TemplateBinding BorderBrush}">
+                                <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                            </Border>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <EventTrigger RoutedEvent="PreviewMouseDown">
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <ThicknessAnimation Storyboard.TargetProperty="Margin" Duration="0:0:0.100" To="2"/>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger>
 
+                            <EventTrigger RoutedEvent="PreviewMouseUp">
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <ThicknessAnimation Storyboard.TargetProperty="Margin" Duration="0:0:0.100" To="0"/>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger>
+
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Opacity" Value="1"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
+    <Grid>
+        <Grid Height="30" VerticalAlignment="Top">
+            <StackPanel Orientation="Horizontal">
+                <Grid Width="40" Margin="5">
+                    <Button x:Name="Save" Style="{StaticResource Button}" ToolTip="Save" Click="Save_Click">
+                        <Image Source="/Image/save.png"/>
+                    </Button>
+                </Grid>
+            </StackPanel>
+        </Grid>
+        <Grid Margin="0,30,0,0">
+            <DataGrid x:Name="Table_display" FontSize="20" FontWeight="Bold" AutoGenerateColumns="False">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="ID" Width="50" Binding="{Binding Path=ID}" IsReadOnly="True"/>
+                    <DataGridTextColumn Header="DateTime" Width="220" Binding="{Binding Path=Date_time}" IsReadOnly="True"/>
+                    <DataGridTextColumn Header="Name operation" Width="180" Binding="{Binding Path=Name_operation}"/>
+                    <DataGridTextColumn Header="Sum oparation" Width="162*" Binding="{Binding Path=Sum_oparation}"/>
+                </DataGrid.Columns>
+            </DataGrid>
+        </Grid>
     </Grid>
 </Window>
